testsuite/tests/th/TH_NestedSplicesFail2.stderr
TH_NestedSplicesFail2.hs:4:12: error: [GHC-45108]
    • Untyped splices may not appear in typed brackets.
    • In the untyped splice: $y
      In the Template Haskell typed quotation: [|| $y ||]

